--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "repos_dir/jabref"]
 	path = repos_dir/jabref
-	url = https://github.com/JabRef/jabref.git
+	url = https://github.com/thiagogquinto/jabref.git
